unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Host is Accepted - Created to use in Accepted Email Flow</description>
    <inlineHelpText>Check if Host is Accepted</inlineHelpText>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>