unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Accessible_by_public_transportation__c.field-meta.xml
<CustomField>
    <fullName>Accessible_by_public_transportation__c</fullName>
    <formula>Host_Application__r.Accessible_by_Public_Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEL_Accessible by public transportation?</label>
    <type>Checkbox</type>
</CustomField>