unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Climate Corps Engagements</relationshipLabel>
    <relationshipName>Climate_Corp_Fellows</relationshipName>
    <type>Lookup</type>
</CustomField>