unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Additional Contact)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements3</relationshipName>
    <type>Lookup</type>
</CustomField>