unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <formula>SUBSTITUTE(High_Level_Sponsor__r.Email&amp;","&amp; HR_Contact__r.Email,"+","%2B")</formula>
    <inlineHelpText>For use with Conga. Allows the + sign to be used inside an email.</inlineHelpText>
    <label>Additional Emails</label>
    <type>Text</type>
</CustomField>