unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Available_public_transportation__c.field-meta.xml
<CustomField>
    <fullName>Available_public_transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated as of 10/2/23</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>DEL_Available public transportation?</label>
    <type>Checkbox</type>
</CustomField>