unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Background_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Host requires background check for fellow. FormAssembly.</description>
    <label>Background Check Required</label>
    <type>Checkbox</type>
</CustomField>