unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/CC_Engagement_Manager_first_name__c.field-meta.xml
<CustomField>
    <fullName>CC_Engagement_Manager_first_name__c</fullName>
    <formula>EDF_Engagement_Manager__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Engagement Manager first name</label>
    <type>Text</type>
</CustomField>