unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/China_Fellow_Agreement__c.field-meta.xml
<CustomField>
    <fullName>China_Fellow_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only applicable for CC fellows in the China program that are in Stage = Engagement Confirmed. Checkbox auto-checks when the user selects DONE for the China Fellow Agreement tile on the Deliverable Tracker</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "China Fellow Agreement" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>China Fellow Agreement</label>
    <type>Checkbox</type>
</CustomField>