unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Comment_On_Final_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Comment_On_Final_Deliverables__c</fullName>
    <description>Comments on your final deliverables</description>
    <inlineHelpText>comments on your final deliverables</inlineHelpText>
    <label>Comment On Final Deliverables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>