unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Competitive_Host_based_on_ConsiderMe__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Host_based_on_ConsiderMe__c</fullName>
    <formula>Number_Of_Consider_Me__c &gt; 75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitive Host based on ConsiderMe</label>
    <type>Checkbox</type>
</CustomField>