unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Competitive_Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Host_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box triggers the gold star on ConsiderMe</inlineHelpText>
    <label>Competitive Host/Location</label>
    <type>Checkbox</type>
</CustomField>