unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Complete_Post_Training_Items__c.field-meta.xml
<CustomField>
    <fullName>Complete_Post_Training_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Complete Post Training Items" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Complete Post Training Items" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Complete Post Training Items</label>
    <type>Checkbox</type>
</CustomField>