unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Completed_Training_Pre_Work__c.field-meta.xml
<CustomField>
    <fullName>Completed_Training_Pre_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fellow confirmed they completed the training pre-work</inlineHelpText>
    <label>Completed Training Pre-Work</label>
    <type>Checkbox</type>
</CustomField>