unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/CompleteTrainingPreWork__c.field-meta.xml
<CustomField>
    <fullName>CompleteTrainingPreWork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Read the Climate Corps Reference Book" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Read the Climate Corps Reference Book" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Read the Climate Corps Reference Book</label>
    <type>Checkbox</type>
</CustomField>