unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Conga_Trigger_Host_App__c.field-meta.xml
<CustomField>
    <fullName>Conga_Trigger_Host_App__c</fullName>
    <description>##Conga created button:00b7d000001dc6o</description>
    <formula>"&amp;solmgr=1" + 
"&amp;id=" + Id +
"&amp;templateid=0T_020EAI426201" + 
"&amp;qmode=SalesforceFile"</formula>
    <label>Conga Trigger Host App</label>
    <type>Text</type>
</CustomField>