unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Covid_Vaccine_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Covid_Vaccine_Requirement__c</fullName>
    <description>Open text q on host app re: vaccine requirements. formassembly.</description>
    <label>Covid Vaccine Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>