unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Current_Students_Only__c.field-meta.xml
<CustomField>
    <fullName>Current_Students_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fellow must be returning to school in the fall. FormAssembly.</description>
    <inlineHelpText>Fellow must be returning to school in the fall.</inlineHelpText>
    <label>Current Students Only</label>
    <type>Checkbox</type>
</CustomField>