unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Date_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Submitted__c</fullName>
    <description>Date of host application submission</description>
    <inlineHelpText>Date host application was submitted</inlineHelpText>
    <label>Date Application Submitted</label>
    <type>Date</type>
</CustomField>