unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Date_Engagement_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Engagement_Confirmed__c</fullName>
    <description>Date stage updated to Engagement Confirmed</description>
    <inlineHelpText>Date stage updated to Engagement Confirmed</inlineHelpText>
    <label>Date Engagement Confirmed</label>
    <type>Date</type>
</CustomField>