unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Date_exit_interview_complete__c.field-meta.xml
<CustomField>
    <fullName>Date_exit_interview_complete__c</fullName>
    <label>Date end of engagement mtg complete</label>
    <type>Date</type>
</CustomField>