unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Department_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Department_Team_Comments__c</fullName>
    <description>Host application, populated via form assembly.</description>
    <inlineHelpText>Tell us about the internal team/department that the Fellow will be working with</inlineHelpText>
    <label>Department/Team Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>