unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Direct_Supervisor_Email2__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor_Email2__c</fullName>
    <formula>Host_Application__r.Direct_Supervisor_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Supervisor Email</label>
    <type>Text</type>
</CustomField>