unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>TextArea</type>
</CustomField>