unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/EDF_Relationship_Note__c.field-meta.xml
<CustomField>
    <fullName>EDF_Relationship_Note__c</fullName>
    <inlineHelpText>Whose relationship? Staff member, board member, etc?</inlineHelpText>
    <label>EDF Relationship/Recruiting Note</label>
    <type>TextArea</type>
</CustomField>