unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Engagement_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Engagement Account Name</label>
    <type>Text</type>
</CustomField>