unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Engagement_Duration__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Duration__c</fullName>
    <description>length of engagement, from host app (form assembly)</description>
    <inlineHelpText>Length of engagement from Host App</inlineHelpText>
    <label>Engagement Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8 weeks</fullName>
            </value>
            <value>
                <fullName>10 weeks</fullName>
            </value>
            <value>
                <fullName>11 weeks</fullName>
            </value>
            <value>
                <fullName>12 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>