unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/ExitInt_Lessons_from_Overcoming_Barriers__c.field-meta.xml
<CustomField>
    <fullName>ExitInt_Lessons_from_Overcoming_Barriers__c</fullName>
    <label>Lessons from Overcoming Barriers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>