unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/ExitInt_Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>ExitInt_Project_Overview__c</fullName>
    <inlineHelpText>Include all notes, especially those helpful to relationship management + check-ins. How will the host measure success?</inlineHelpText>
    <label>Project Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>