unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Application__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellow Application</label>
    <referenceTo>Fellow_Application__c</referenceTo>
    <relationshipLabel>Climate Corps Engagements</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>