unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Email_from_app__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Email_from_app__c</fullName>
    <label>Fellow Email</label>
    <type>Email</type>
</CustomField>