unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Initials__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Initials__c</fullName>
    <description>This field is used to store the initials of the Fellow</description>
    <label>Fellow Initials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>