unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Name_text__c</fullName>
    <formula>Fellow_Name__r.FirstName   &amp; " " &amp;  Fellow_Name__r.Maiden_Name__c  &amp; " " &amp; Fellow_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellow Name</label>
    <type>Text</type>
</CustomField>