unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_pay_week__c.field-meta.xml
<CustomField>
    <fullName>Fellow_pay_week__c</fullName>
    <description>Amount fellow will be paid per week. Host paid only. FormAssembly.</description>
    <inlineHelpText>Amount fellow will be paid per week. Host paid only.</inlineHelpText>
    <label>Fellow pay/week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>