unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_School__c.field-meta.xml
<CustomField>
    <fullName>Fellow_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellow School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Fellow School)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>