unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_School_txt__c.field-meta.xml
<CustomField>
    <fullName>Fellow_School_txt__c</fullName>
    <formula>Fellow_School__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellow School</label>
    <type>Text</type>
</CustomField>