unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Training_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Training_Confirmation__c</fullName>
    <description>Fellow's initials indicate they completed the required amount of fellow training sessions.</description>
    <label>Fellow Training Confirmation</label>
    <type>TextArea</type>
</CustomField>