unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Training_Survey_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Training_Survey_Confirmation__c</fullName>
    <description>Fellow's initials indicate they completed the post training survey.</description>
    <inlineHelpText>Fellow's initials indicate they completed the post training survey.</inlineHelpText>
    <label>Fellow Training Survey Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>