unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Address__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Address__c</fullName>
    <description>Host app, open text for multiple locations</description>
    <inlineHelpText>Host application question</inlineHelpText>
    <label>Fellowship Address</label>
    <type>TextArea</type>
</CustomField>