unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Address_host__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Address_host__c</fullName>
    <formula>Host_Application__r.Fellowship_Address__c</formula>
    <label>Fellowship Address</label>
    <type>Text</type>
</CustomField>