unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_CityHA__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_CityHA__c</fullName>
    <description>Shows on Engagement List, populated from host application</description>
    <inlineHelpText>Shows on Engagement List, populated from host application</inlineHelpText>
    <label>Fellowship City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>