unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Feedback_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Submit Fellowship Feedback Survey" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Submit Fellowship Feedback Survey" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Fellowship Feedback Survey</label>
    <type>Checkbox</type>
</CustomField>