unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Location_Preference__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Location_Preference__c</fullName>
    <formula>TEXT(Host_Application__r.Fellowship_Location_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellowship Location Preference</label>
    <type>Text</type>
</CustomField>